Uploaded Update from 7-Feb-17
Incremental Development

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <header ng-include='"header.html"'></header>
-    <section ng-view></section>
+    <main ng-view></main>
   </body>
 </html>
